src/state.c
@@ -60,6 +60,7 @@
  */
 
 #include "keymap.h"
+#include "keysym.h"
 
 struct xkb_filter {
     union xkb_action action;
@@ -832,13 +833,26 @@ XKB_EXPORT xkb_keysym_t
 xkb_state_key_get_one_sym(struct xkb_state *state, xkb_keycode_t kc)
 {
     const xkb_keysym_t *syms;
+    xkb_keysym_t sym;
     int num_syms;
+    xkb_mod_index_t caps;
 
     num_syms = xkb_state_key_get_syms(state, kc, &syms);
     if (num_syms != 1)
         return XKB_KEY_NoSymbol;
 
-    return syms[0];
+    sym = syms[0];
+
+    /*
+     * Perform capitalization transformation, see:
+     * http://www.x.org/releases/current/doc/kbproto/xkbproto.html#Interpreting_the_Lock_Modifier
+     */
+    caps = xkb_keymap_mod_get_index(state->keymap, XKB_MOD_NAME_CAPS);
+    if (xkb_state_mod_index_is_active(state, caps, XKB_STATE_MODS_EFFECTIVE) > 0 &&
+        xkb_state_mod_index_is_consumed(state, kc, caps) == 0)
+        sym = xkb_keysym_to_upper(sym);
+
+    return sym;
 }
 
 /**
